fixes some layout issues for responsiveness sake

--- a/frontend/src/components/pages/dashboard.css
+++ b/frontend/src/components/pages/dashboard.css
@@ -2,9 +2,9 @@
     margin-bottom: 30px;
 }
 
-.cards-row.second-row {
-    height: 414px;
-}
+/* .cards-row.second-row {
+    min-height: 414px;
+} */
 
 .cards-row .card, .cards-row .card-content, .cards-row .content {
     height: 100%;
